# trunk

./: .gitignore  README.md
CPP/patterns/: CMakeLists.txt
CPP/patterns/creation_abstract_factory/: CMakeLists.txt  main.cpp
CPP/patterns/creation_builder/: CMakeLists.txt  main.cpp
CPP/patterns/creation_prototype/: CMakeLists.txt
CPP/patterns/utils/: Logger.h
CPP/variadic_template/: Makefile  main.cpp
ControlPanel/: ControlPanel.pro  main.cpp  main.qml
ControlPanel/inc/: CApp.h  CCommander.h  CUIModel.h  CommandInterface.h
ControlPanel/inc/xenomai/: Xeno4CommandInterface.h  Xeno4Device.h
ControlPanel/src/: CApp.cpp  CCommander.cpp  CUIModel.cpp
ControlPanel/src/xenomai/: Xeno4Device.cpp  (+1 more)
ROS/: README.md
camerav4l2/: CMakeLists.txt  READMED.md  config.json
camerav4l2/inc/: CConfiguration.h  CDevice.h  CDeviceConfig.h  CWindow.h  CommonDefs.h
camerav4l2/inc/utils/: Logger.h
camerav4l2/src/: CConfiguration.cpp  CDevice.cpp  CDeviceConfig.cpp  CWindow.cpp  main.cpp
voslam/: CMakeLists.txt
voslam/docs/: requirements.md
voslam/docs/design/: ClassDiagram.puml  SequenceDiagram.puml
voslam/src/test/: monocular.cpp  stereo.cpp
voslam/src/voslam/app/: App.cpp  App.h  Engine.cpp  Engine.h
voslam/src/voslam/common/: CommonDefs.h  CommonEnums.h
voslam/src/voslam/core/: Configuration.cpp  Configuration.h  Device.h  DeviceMono.cpp  DeviceMono.h  Frame.cpp  Frame.h
voslam/src/voslam/core/ipc/: Looper.cpp  Looper.h
voslam/src/voslam/gui/: ControlPanel.h  OdoVisualizer.cpp  OdoVisualizer.h  SLAMVisualizer.h
voslam/src/voslam/odo/: OdoEstimator.cpp  OdoEstimator.h
voslam/src/voslam/slam/: SLAMEstimator.cpp  SLAMEstimator.h
voslam/src/voslam/utils/: Logger.h
(+15 files in other folders)
